apply plugin: 'com.android.application'

android {
    namespace 'de.wladimircomputin.cryptohouse'
    compileSdk = 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    defaultConfig {
        applicationId 'de.wladimircomputin.cryptohouse'
        minSdkVersion 26
        targetSdk 35
        versionCode 510
        versionName '5.1.0'
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }

    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }
}

repositories {
    maven { url "https://jitpack.io" }
    maven { url 'https://maven.aliyun.com/repository/jcenter' }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation project(':libcryptoiot')

    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.navigation:navigation-fragment:2.9.8'
    implementation 'androidx.navigation:navigation-ui:2.9.8'

    implementation 'mobi.upod:time-duration-picker:1.1.3'
    implementation 'io.github.thanosfisherman.wifiutils:wifiutils:1.6.6'
    implementation 'com.github.shchurov:horizontalwheelview:0.9.5'
    implementation 'com.mikhaellopez:circularimageview:4.3.1'
    implementation "com.ncorti:slidetoact:0.11.0"

    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
}